# mandelbrot-rs

./: .dockerignore  .travis.yml  Cargo.toml  README.md  build_or_release.sh  manylinux1.dockerfile  manylinux2010.dockerfile  manylinux2014.dockerfile  tox.ini
src/: lib.rs
tests/: test_mandelbrot_rs.py
